# drf_ItFox

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
api/: default.py  serializers.py  urls.py  views.py
news/: models.py  serializers.py  urls.py
news/migrations/: 0001_initial.py  0002_news_title_squashed_0003_news_text.py  0003_auto_20210715_0423.py  0004_auto_20210715_1459.py
project/: settings.py
users/: managers.py  models.py
users/migrations/: 0001_initial.py
